# SGBD

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  archivos_esquemaventas.txt  bplustree_impl.cpp  cmake_install.cmake  compile_commands.json  entradas.txt  prueba1.txt  tabla_hash.txt
.cache/clangd/index/: bloque.h.ED4E5628AD469C3A.idx  bufferManager.h.982B75DCBA917571.idx  (+12 more)
archivo_info_Disco/: info_disco.txt
archivos_csv/: Calzado.csv  Postulantes.csv
archivos_esquema/: datos_housing.txt  datos_titanic.txt  esquema_Calzado.txt  esquema_Postulantes.txt  esquema_hosing.txt  esquema_registro_bloques.txt  esquema_titanic.txt  esquema_ventas.txt  longitudes_maximas.txt
archivos_estructura_bloque/: head_bloque_fijo.txt  rf_info_bloques.txt
output/: main
rutas_sectores/: cilindroMedio.txt  rutas.txt
src/: CMakeLists.txt  Makefile  a  cmake_install.cmake  main.cpp  prueba.cpp
src/implementacion/: bloque.cpp  bufferManager.cpp  controladorDisco.cpp  controlador_Query.cpp  directorioHash.cpp  disco.cpp  esquema.cpp  funciones.cpp  funcionesBloque.cpp  funciones_menu.cpp  gestorAlmacenamiento.cpp  gestorBloque.cpp  hashing_extendible.cpp  insertar.cpp  query.cpp
src/implementacion/.cph/: .funciones_menu.cpp_0d0df2dae30d22529f5a8a21253bf916.prob
src/implementacion/output/: funciones
src/include/: bloque.h  bufferManager.h  controladorDisco.h  controlador_Query.h  directorioHash.h  disco.h  esquema.h  funciones.h  funcionesBloque.h  funciones_menu.h  gestorAlmacenamiento.h  gestorBloques.h  hashing_extendible.h  insertar.h  query.h
(+370 files in other folders)
